--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -4,6 +4,9 @@
   margin-bottom: 50px;
   background: $bright-color;
 }
+.buttons-section {
+  display: flex;
+}
 
 .buttons-list {
   display: flex;
@@ -11,7 +14,7 @@
   gap: 15px 8px;
   @media screen and (min-width: 768px) {
     justify-content: center;
-    gap: 0;
+    gap: 8;
   }
   &__items {
     @include text-filter(500, 16px, 30px, 0);
@@ -21,6 +24,7 @@
     color: $color;
     cursor: pointer;
     transition: color 250ms $transition 50ms;
+    width: 100%;
     @media screen and (min-width: 768px) {
       margin-bottom: 0;
     }
