--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -8,7 +8,11 @@
   }
 }
 
-.footer-section .container {
+.footer-section {
+  display: flex;
+}
+
+.footer .container {
   padding-top: 60px;
   padding-bottom: 60px;
   display: flex;
@@ -41,11 +45,15 @@
 }
 
 .footer-social {
+  margin-bottom: 60px;
+  margin-top: 60px;
+  @media screen and (min-width: 768px) {
+    margin-bottom: auto;
+    margin-top: 0;
+  }
   @media screen and (min-width: 1200px) {
     margin-left: 70px;
   }
-  margin-top: 60px;
-  margin-bottom: 60px;
   &__title {
     @include text-filter(700, 14px, 16px, 0.03em);
     margin-bottom: 20px;
@@ -81,9 +89,11 @@
 .footer-info {
   @media screen and (min-width: 768px) {
     margin-right: 165px;
+    margin-bottom: 42px;
   }
   @media screen and (min-width: 1200px) {
     margin-right: 0;
+    margin-bottom: 0;
   }
   &__logo {
     color: $bright-color;
@@ -104,8 +114,10 @@
 .footer-media {
   @media screen and (min-width: 1200px) {
     margin-left: 93px;
+    margin-bottom: auto;
   }
   &__text {
+    @include text-filter (700, 14px, 16px, 0.03em);
     margin-bottom: 20px;
     color: $bright-color;
     text-align: center;
@@ -122,6 +134,7 @@
   gap: 20px;
   &__input {
     @include width-height(100%, 50px);
+    padding-left: 16px;
     margin-right: 10px;
     background: $black-ground;
     @include border(1px solid rgba(255, 255, 255, 0.3));
