--- a/sass/portfolio.css
+++ b/sass/portfolio.css
@@ -78,8 +78,10 @@ body {
   border: 1px solid #ECECEC;
 }
 
-.header-section__web {
+.header-section {
   display: flex;
+}
+.header-section__web {
   justify-content: flex-end;
   font-weight: 700;
   font-size: 26px;
@@ -217,7 +219,7 @@ body {
 }
 .header-list__bar {
   border-bottom: 4px solid #2196F3;
-  margin-top: 2px;
+  margin-top: 3px;
   display: block;
   width: 100%;
   height: 42px;
@@ -296,6 +298,10 @@ body {
   background: #FFFFFF;
 }
 
+.buttons-section {
+  display: flex;
+}
+
 .buttons-list {
   display: flex;
   flex-wrap: wrap;
@@ -304,7 +310,7 @@ body {
 @media screen and (min-width: 768px) {
   .buttons-list {
     justify-content: center;
-    gap: 0;
+    gap: 8;
   }
 }
 .buttons-list__items {
@@ -319,6 +325,7 @@ body {
   color: #212121;
   cursor: pointer;
   transition: color 250ms cubic-bezier(0.39, 0.575, 0.565, 1) 50ms;
+  width: 100%;
 }
 @media screen and (min-width: 768px) {
   .buttons-list__items {
@@ -333,6 +340,11 @@ body {
   color: #FFFFFF;
 }
 
+.poster-section {
+  display: flex;
+  flex-direction: column;
+}
+
 .poster-list {
   margin-bottom: 94px;
   display: flex;
@@ -343,7 +355,7 @@ body {
 .poster-list__item {
   padding-bottom: 20px;
   border: 1px solid #EEEEEE;
-  width: 370px;
+  width: 354px;
   cursor: pointer;
 }
 .poster-list__item:hover {
@@ -374,6 +386,8 @@ body {
   letter-spacing: 0.06em;
   margin: 16px, none, 24, 24;
   color: #212121;
+  padding-left: 24px;
+  margin-top: 20px;
 }
 .poster-list__description {
   font-weight: 400;
@@ -381,6 +395,7 @@ body {
   line-height: 30px;
   letter-spacing: 0.03em;
   color: #757575;
+  padding-left: 24px;
 }
 
 .poster-list__item:hover .poster-list__overlay {
@@ -405,7 +420,11 @@ body {
   justify-content: flex-end;
 }
 
-.footer-section .container {
+.footer-section {
+  display: flex;
+}
+
+.footer .container {
   padding-top: 60px;
   padding-bottom: 60px;
   display: flex;
@@ -416,12 +435,12 @@ body {
   text-align: center;
 }
 @media screen and (min-width: 768px) {
-  .footer-section .container {
+  .footer .container {
     flex-direction: row;
   }
 }
 @media screen and (min-width: 1200px) {
-  .footer-section .container {
+  .footer .container {
     text-align: start;
   }
 }
@@ -442,8 +461,14 @@ body {
 }
 
 .footer-social {
-  margin-top: 60px;
   margin-bottom: 60px;
+  margin-top: 60px;
+}
+@media screen and (min-width: 768px) {
+  .footer-social {
+    margin-bottom: auto;
+    margin-top: 0;
+  }
 }
 @media screen and (min-width: 1200px) {
   .footer-social {
@@ -488,11 +513,13 @@ body {
 @media screen and (min-width: 768px) {
   .footer-info {
     margin-right: 165px;
+    margin-bottom: 42px;
   }
 }
 @media screen and (min-width: 1200px) {
   .footer-info {
     margin-right: 0;
+    margin-bottom: 0;
   }
 }
 .footer-info__logo {
@@ -519,9 +546,14 @@ body {
 @media screen and (min-width: 1200px) {
   .footer-media {
     margin-left: 93px;
+    margin-bottom: auto;
   }
 }
 .footer-media__text {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
   margin-bottom: 20px;
   color: #FFFFFF;
   text-align: center;
@@ -541,6 +573,7 @@ body {
 .footer-media-form__input {
   width: 100%;
   height: 50px;
+  padding-left: 16px;
   margin-right: 10px;
   background: #2F303A;
   border: 1px solid rgba(255, 255, 255, 0.3);
