--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -12,7 +12,7 @@
   display: flex;
 }
 
-.footer .container {
+.footer-section .container {
   padding-top: 60px;
   padding-bottom: 60px;
   display: flex;
