--- a/sass/main.css
+++ b/sass/main.css
@@ -68,11 +68,6 @@ body {
   align-items: center;
   border: #ECECEC 1px solid;
 }
-@media screen and (min-width: 768px) {
-  .header .container {
-    justify-content: space-evenly;
-  }
-}
 
 .header-line {
   border: 1px solid #ECECEC;
@@ -88,8 +83,12 @@ body {
   line-height: 31px;
   letter-spacing: 0.03em;
   color: #2196F3;
-  margin-right: 93px;
   font-family: "Raleway";
+}
+@media screen and (min-width: 1200px) {
+  .header-section__web {
+    margin-left: 215px;
+  }
 }
 .header-section__logo {
   color: black;
@@ -117,7 +116,8 @@ body {
   border: none;
   background-color: transparent;
   margin-left: auto;
-  margin-right: 20px;
+  margin-right: 32px;
+  margin-top: 13px;
   cursor: pointer;
 }
 .header-modal__open {
@@ -281,6 +281,11 @@ body {
   height: 100%;
   padding: 15px;
   background-color: white;
+}
+@media screen and (min-width: 768px) {
+  .header-modal {
+    display: none;
+  }
 }
 
 .is-hidden {
@@ -617,6 +622,10 @@ body {
   }
 }
 
+.work-section {
+  display: flex;
+}
+
 .work-section__title {
   font-weight: 700;
   font-size: 36px;
@@ -678,20 +687,19 @@ body {
   font-size: 36px;
   line-height: 42px;
   letter-spacing: 0.03em;
-  margin-bottom: 50px;
   text-align: center;
   color: #212121;
 }
 
 .team-section {
   display: flex;
+  background: #F5F4FA;
 }
 
 .team-section .container {
   padding-top: 94px;
   padding-bottom: 115px;
   background: #F5F4FA;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .team-list {
@@ -866,7 +874,7 @@ body {
   display: flex;
 }
 
-.footer .container {
+.footer-section .container {
   padding-top: 60px;
   padding-bottom: 60px;
   display: flex;
@@ -877,12 +885,12 @@ body {
   text-align: center;
 }
 @media screen and (min-width: 768px) {
-  .footer .container {
+  .footer-section .container {
     flex-direction: row;
   }
 }
 @media screen and (min-width: 1200px) {
-  .footer .container {
+  .footer-section .container {
     text-align: start;
   }
 }
