--- a/sass/components/_poster.scss
+++ b/sass/components/_poster.scss
@@ -1,6 +1,5 @@
 .poster-section {
   display: flex;
-  flex-direction: column;
 }
 
 .poster-list {
@@ -8,6 +7,7 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
+  justify-content: center;
   gap: 15px;
   &__item {
     padding-bottom: 20px;
