--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,12 +1,12 @@
 .team-section__title {
   @include text-filter(700, 36px, 42px, 0.03em);
-  margin-bottom: 50px;
   text-align: center;
   color: $color;
 }
 
 .team-section {
   display: flex;
+  background: $background-color-bright;
 }
 
 .team-section .container {
@@ -14,7 +14,6 @@
   padding-top: 94px;
   padding-bottom: 115px;
   background: $background-color-bright;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .team-list {
