--- a/sass/portfolio.css
+++ b/sass/portfolio.css
@@ -68,11 +68,6 @@ body {
   align-items: center;
   border: #ECECEC 1px solid;
 }
-@media screen and (min-width: 768px) {
-  .header .container {
-    justify-content: space-evenly;
-  }
-}
 
 .header-line {
   border: 1px solid #ECECEC;
@@ -88,8 +83,12 @@ body {
   line-height: 31px;
   letter-spacing: 0.03em;
   color: #2196F3;
-  margin-right: 93px;
   font-family: "Raleway";
+}
+@media screen and (min-width: 1200px) {
+  .header-section__web {
+    margin-left: 215px;
+  }
 }
 .header-section__logo {
   color: black;
@@ -117,7 +116,8 @@ body {
   border: none;
   background-color: transparent;
   margin-left: auto;
-  margin-right: 20px;
+  margin-right: 32px;
+  margin-top: 13px;
   cursor: pointer;
 }
 .header-modal__open {
@@ -282,6 +282,11 @@ body {
   padding: 15px;
   background-color: white;
 }
+@media screen and (min-width: 768px) {
+  .header-modal {
+    display: none;
+  }
+}
 
 .is-hidden {
   opacity: 0;
@@ -342,7 +347,6 @@ body {
 
 .poster-section {
   display: flex;
-  flex-direction: column;
 }
 
 .poster-list {
@@ -350,6 +354,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
+  justify-content: center;
   gap: 15px;
 }
 .poster-list__item {
@@ -424,7 +429,7 @@ body {
   display: flex;
 }
 
-.footer .container {
+.footer-section .container {
   padding-top: 60px;
   padding-bottom: 60px;
   display: flex;
@@ -435,12 +440,12 @@ body {
   text-align: center;
 }
 @media screen and (min-width: 768px) {
-  .footer .container {
+  .footer-section .container {
     flex-direction: row;
   }
 }
 @media screen and (min-width: 1200px) {
-  .footer .container {
+  .footer-section .container {
     text-align: start;
   }
 }
