--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -15,10 +15,8 @@
     justify-content: flex-end;
     @include text-filter(700, 26px, 31px, 0.03em);
     color: $accent-color;
+    margin-right: 93px;
     font-family: "Raleway";
-    @media screen and (min-width: 1200px) {
-      margin-left: 215px;
-    }
   }
   &__logo {
     color: $black-color;
