--- a/sass/portfolio.css
+++ b/sass/portfolio.css
@@ -83,12 +83,8 @@ body {
   line-height: 31px;
   letter-spacing: 0.03em;
   color: #2196F3;
+  margin-right: 93px;
   font-family: "Raleway";
-}
-@media screen and (min-width: 1200px) {
-  .header-section__web {
-    margin-left: 215px;
-  }
 }
 .header-section__logo {
   color: black;
