--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -2,6 +2,7 @@
   @include text-filter(700, 36px, 42px, 0.03em);
   text-align: center;
   color: $color;
+  margin-bottom: 50px;
 }
 
 .team-section {
