--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -2,14 +2,16 @@
   background-image: linear-gradient(
     $rgba-colorless,
     $rgba-colorless
-    ),
-    url(../img/img-2/Img.jpg);
+    ),;
     padding-top: 118px;
     padding-bottom: 118px;
     background-size: cover;
     @media screen and (min-width: 1200px) {
       padding-top: 200px;
       padding-bottom: 200px;
+      @media screen and (min-width: 1200px) {
+        
+      }
     }
   &__button {
     @include text-filter(700, 16px, 30px, 0);
