--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,29 +1,29 @@
 .hero-section {
-  background-image: linear-gradient($rgba-colorless, $rgba-colorless), url(../../img/img-2/hero/hero-mobile-1x.jpg);
+  background-image: linear-gradient($rgba-colorless, $rgba-colorless), url(../img/img-2/hero/hero-mobile-1x.jpg);
     @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
-    background-image: linear-gradient($rgba-colorless, $rgba-colorless), url(../../img/img-2/hero/hero-mobile-2x.jpg);
+    background-image: linear-gradient($rgba-colorless, $rgba-colorless), url(../img/img-2/hero/hero-mobile-2x.jpg);
     }
     padding-top: 118px;
     padding-bottom: 118px;
     background-size: cover;
     @media screen and (min-width: 768px) {
-      background-image: linear-gradient($rgba-colorless, $rgba-colorless), url(../../img/img-2/hero/hero-tablet-1x.jpg);
+      background-image: linear-gradient($rgba-colorless, $rgba-colorless), url(../img/img-2/hero/hero-tablet-1x.jpg);
       @media (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
-      background-image: linear-gradient($rgba-colorless, $rgba-colorless), url(../../img/img-2/hero/hero-tablet-2x.jpg);
+      background-image: linear-gradient($rgba-colorless, $rgba-colorless), url(../img/img-2/hero/hero-tablet-2x.jpg);
       }
     }
     @media screen and (min-width: 1200px) {
       padding-top: 200px;
       padding-bottom: 200px;
-      background-image: linear-gradient($rgba-colorless, $rgba-colorless), url(../../img/img-2/hero/hero-desktop-1x.jpg);
+      background-image: linear-gradient($rgba-colorless, $rgba-colorless), url(../img/img-2/hero/hero-desktop-1x.jpg);
       @media (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
-      background-image: linear-gradient($rgba-colorless, $rgba-colorless), url(../../img/img-2/hero/hero-desktop-2x.jpg);
+      background-image: linear-gradient($rgba-colorless, $rgba-colorless), url(../img/img-2/hero/hero-desktop-2x.jpg);
       }
     }
   &__button {
