--- a/sass/utilis/_variables.scss
+++ b/sass/utilis/_variables.scss
@@ -9,6 +9,7 @@ $bright-color: #FFFFFF;
 $accented-color: #188CE8;
 $color: #212121;
 $background-color-bright: #F5F4FA;
+$white-color: #FFFFFF;
 $rain-color: #AFB1B8;
 $bit-bright: #ECECEC;
 $bright-grey: #EEEEEE;
