--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -38,19 +38,24 @@
     color: $button-color;
     box-shadow: 2px 2px 2px 2px $box-shadow;
     transition: color 250ms $transition 25ms,
-    background-color 1s $transition 100ms;
+    background-color 100ms $transition 100ms;
     &:hover {
       background-color: $accent-color;
       color: $bright-color;
     }
   }
-  &__title {
-    @include text-filter(900, 26px, 42px, 0.06em);
-    text-align: center;
+  &__title{
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 360px;
     text-transform: uppercase;
-    color: $bright-color;
+    color: $white-color;
+    text-align: center;
+    @include text-filter(900, 26px, 42px, 0.06em);
     @media screen and (min-width: 1200px) {
       @include text-filter(900, 44px, 60px, 0.06em);
+        max-width: 696px;
+        text-align: center;
     }
   }
 }
