--- a/sass/main.css
+++ b/sass/main.css
@@ -342,20 +342,23 @@ body {
   background-color: #4e4b4b;
   color: #777784;
   box-shadow: 2px 2px 2px 2px #444242;
-  transition: color 250ms cubic-bezier(0.39, 0.575, 0.565, 1) 25ms, background-color 1s cubic-bezier(0.39, 0.575, 0.565, 1) 100ms;
+  transition: color 250ms cubic-bezier(0.39, 0.575, 0.565, 1) 25ms, background-color 100ms cubic-bezier(0.39, 0.575, 0.565, 1) 100ms;
 }
 .hero-section__button:hover {
   background-color: #2196F3;
   color: #FFFFFF;
 }
 .hero-section__title {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 360px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  text-align: center;
   font-weight: 900;
   font-size: 26px;
   line-height: 42px;
   letter-spacing: 0.06em;
-  text-align: center;
-  text-transform: uppercase;
-  color: #FFFFFF;
 }
 @media screen and (min-width: 1200px) {
   .hero-section__title {
@@ -363,6 +366,8 @@ body {
     font-size: 44px;
     line-height: 60px;
     letter-spacing: 0.06em;
+    max-width: 696px;
+    text-align: center;
   }
 }
 
