--- a/sass/utilis/_mixin.scss
+++ b/sass/utilis/_mixin.scss
@@ -26,3 +26,14 @@
   border: $border;
   border-radius: $border-radius;
 }
+
+@mixin grids-list($gap) {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: $gap;
+}
+
+@mixin grids-item($items, $gap) {
+width: calc((100% - ($items * $gap)) / $items);
+}
