--- a/sass/components/_client.scss
+++ b/sass/components/_client.scss
@@ -10,10 +10,8 @@
 }
 
 .client-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
+  @include grids-list(20px);
+  justify-content: none;
   @media screen and (min-width: 1200px) {
     display: flex;
     flex-wrap: nowrap;
