--- a/sass/components/_qualities.scss
+++ b/sass/components/_qualities.scss
@@ -25,20 +25,16 @@
 }
 
 .qualities-list {
-  gap: 30px;
-  display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  @include grids-list(30px);
   &__item {
-    width: 100%;
-    @media screen and (min-width: 480px) {
-      width: 450px;
-    }
+    @include grids-item(2, _);
     @media screen and (min-width: 768px) {
       width: 354px;
+      @include grids-item(2, 30px)
     }
     @media screen and (min-width: 1200px) {
-      width: 270px;
+      @include grids-item(4, 30px)
     }
     &::before {
       content: "";
