--- a/sass/main.css
+++ b/sass/main.css
@@ -574,27 +574,24 @@ body {
 }
 
 .qualities-list {
-  gap: 30px;
-  display: flex;
   flex-direction: row;
+  display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
 }
 .qualities-list__item {
-  width: 100%;
-}
-@media screen and (min-width: 480px) {
-  .qualities-list__item {
-    width: 450px;
-  }
+  width: calc((100% - 2 * _) / 2);
 }
 @media screen and (min-width: 768px) {
   .qualities-list__item {
     width: 354px;
+    width: calc((100% - 60px) / 2);
   }
 }
 @media screen and (min-width: 1200px) {
   .qualities-list__item {
-    width: 270px;
+    width: calc((100% - 120px) / 4);
   }
 }
 .qualities-list__item::before {
@@ -660,9 +657,13 @@ body {
 
 .work-list {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 0;
 }
 .work-list__item {
   position: relative;
+  width: calc((100% - 90px) / 3);
 }
 .work-list__item:not(:first-child) {
   margin-left: 30px;
@@ -728,6 +729,7 @@ body {
 .team-list {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   gap: 30px;
 }
 @media screen and (min-width: 1200px) {
@@ -742,21 +744,17 @@ body {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   text-align: center;
-  width: 100%;
-}
-@media screen and (min-width: 480px) {
-  .team-list__item {
-    width: 450px;
-  }
+  width: calc((100% - 2 * _) / 2);
 }
 @media screen and (min-width: 768px) {
   .team-list__item {
     width: 354px;
+    width: calc((100% - 60px) / 2);
   }
 }
 @media screen and (min-width: 1200px) {
   .team-list__item {
-    width: 270px;
+    width: calc((100% - 120px) / 4);
   }
 }
 .team-list__link {
@@ -831,6 +829,7 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
+  justify-content: none;
 }
 @media screen and (min-width: 1200px) {
   .client-list {
